some padding fixed, console error fixed, overflow fixed

--- a/src/app/main/data/grid/grid-basic/grid-basic.component.scss
+++ b/src/app/main/data/grid/grid-basic/grid-basic.component.scss
@@ -1,6 +1,7 @@
 .container-item {
   width: 100%;
   height: 100%;
+  overflow: hidden;
 
   .name {
     margin: 8px 0;
