--- a/src/app/shared/example/example.component.scss
+++ b/src/app/shared/example/example.component.scss
@@ -28,4 +28,7 @@
     height: 100%;
   }
 
+  .playground-examples{
+    padding: 5px;
+  }
 }
