--- a/src/app/shared/inputs-card/inputs-card.component.scss
+++ b/src/app/shared/inputs-card/inputs-card.component.scss
@@ -1,4 +1,4 @@
-mat-card {
+.inputs-mat-card {
   width: 272px;
   height: 272px;
   margin: 15px;
